FIX: adjust music control element spacing to prevent overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,21 @@ body {
     transform: translateY(-50%);
 }
 
+.horizontal-center {
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+.vertical-center.horizontal-center {
+    -ms-transform: translate(-50%, -50%) !important;
+    transform: translate(-50%, -50%) !important;
+}
+
+.max-h-vh-75 {
+    max-height: 75vh;
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
     .h-sm-auto {
@@ -49,10 +64,53 @@ body {
         position: absolute !important;
     }
 
+    .position-sm-relative {
+        position: relative !important;
+    }
+
     .vertical-sm-center {
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+    }
+
+    .horizontal-sm-center {
+        left: 50%;
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+
+    .vertical-sm-center.horizontal-sm-center {
+        -ms-transform: translate(-50%, -50%) !important;
+        transform: translate(-50%, -50%) !important;
+    }
+
+    .max-h-sm-vh-75 {
+        max-height: 75vh;
+    }
+
+    .fs-sm-1 {
+        font-size: calc(1.375rem + 1.5vw) !important;
+    }
+
+    .fs-sm-2 {
+        font-size: calc(1.325rem + .9vw) !important;
+    }
+
+    .fs-sm-3 {
+        font-size: calc(1.3rem + .6vw) !important;
+    }
+
+    .fs-sm-4 {
+        font-size: calc(1.275rem + .3vw) !important;
+    }
+
+    .fs-sm-5 {
+        font-size: 1.25rem !important;
+    }
+
+    .fs-sm-6 {
+        font-size: 1rem !important;
     }
 }
 
@@ -70,10 +128,53 @@ body {
         position: absolute !important;
     }
 
+    .poisition-md-relative {
+        position: relative !important;
+    }
+
     .vertical-md-center {
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+    }
+
+    .horizontal-md-center {
+        left: 50%;
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+
+    .vertical-md-center.horizontal-md-center {
+        -ms-transform: translate(-50%, -50%) !important;
+        transform: translate(-50%, -50%) !important;
+    }
+
+    .max-h-md-vh-75 {
+        max-height: 75vh;
+    }
+
+    .fs-md-1 {
+        font-size: calc(1.375rem + 1.5vw) !important;
+    }
+
+    .fs-md-2 {
+        font-size: calc(1.325rem + .9vw) !important;
+    }
+
+    .fs-md-3 {
+        font-size: calc(1.3rem + .6vw) !important;
+    }
+
+    .fs-md-4 {
+        font-size: calc(1.275rem + .3vw) !important;
+    }
+
+    .fs-md-5 {
+        font-size: 1.25rem !important;
+    }
+
+    .fs-md-6 {
+        font-size: 1rem !important;
     }
 }
 
@@ -91,10 +192,53 @@ body {
         position: absolute !important;
     }
 
+    .position-lg-relative {
+        position: relative !important;
+    }
+
     .vertical-lg-center {
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+    }
+
+    .horizontal-lg-center {
+        left: 50%;
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+
+    .vertical-lg-center.horizontal-lg-center {
+        -ms-transform: translate(-50%, -50%) !important;
+        transform: translate(-50%, -50%) !important;
+    }
+
+    .max-h-lg-vh-75 {
+        max-height: 75vh;
+    }
+
+    .fs-lg-1 {
+        font-size: calc(1.375rem + 1.5vw) !important;
+    }
+
+    .fs-lg-2 {
+        font-size: calc(1.325rem + .9vw) !important;
+    }
+
+    .fs-lg-3 {
+        font-size: calc(1.3rem + .6vw) !important;
+    }
+
+    .fs-lg-4 {
+        font-size: calc(1.275rem + .3vw) !important;
+    }
+
+    .fs-lg-5 {
+        font-size: 1.25rem !important;
+    }
+
+    .fs-lg-6 {
+        font-size: 1rem !important;
     }
 }
 
@@ -112,10 +256,53 @@ body {
         position: absolute !important;
     }
 
+    .position-xl-relative {
+        position: relative !important;
+    }
+
     .vertical-xl-center {
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+    }
+
+    .horizontal-xl-center {
+        left: 50%;
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+
+    .vertical-xl-center.horizontal-xl-center {
+        -ms-transform: translate(-50%, -50%) !important;
+        transform: translate(-50%, -50%) !important;
+    }
+
+    .max-h-xl-vh-75 {
+        max-height: 75vh;
+    }
+
+    .fs-xl-1 {
+        font-size: calc(1.375rem + 1.5vw) !important;
+    }
+
+    .fs-xl-2 {
+        font-size: calc(1.325rem + .9vw) !important;
+    }
+
+    .fs-xl-3 {
+        font-size: calc(1.3rem + .6vw) !important;
+    }
+
+    .fs-xl-4 {
+        font-size: calc(1.275rem + .3vw) !important;
+    }
+
+    .fs-xl-5 {
+        font-size: 1.25rem !important;
+    }
+
+    .fs-xl-6 {
+        font-size: 1rem !important;
     }
 }
 
@@ -133,9 +320,52 @@ body {
         position: absolute !important;
     }
 
+    .position-xxl-relative {
+        position: relative !important;
+    }
+
     .vertical-xxl-center {
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+    }
+
+    .horizontal-xxl-center {
+        left: 50%;
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+
+    .vertical-xxl-center.horizontal-xxl-center {
+        -ms-transform: translate(-50%, -50%) !important;
+        transform: translate(-50%, -50%) !important;
+    }
+
+    .max-h-xxl-vh-75 {
+        max-height: 75vh;
+    }
+
+    .fs-xxl-1 {
+        font-size: calc(1.375rem + 1.5vw) !important;
+    }
+
+    .fs-xxl-2 {
+        font-size: calc(1.325rem + .9vw) !important;
+    }
+
+    .fs-xxl-3 {
+        font-size: calc(1.3rem + .6vw) !important;
+    }
+
+    .fs-xxl-4 {
+        font-size: calc(1.275rem + .3vw) !important;
+    }
+
+    .fs-xxl-5 {
+        font-size: 1.25rem !important;
+    }
+
+    .fs-xxl-6 {
+        font-size: 1rem !important;
     }
 }
